--- a/StyleSheets/styles.css
+++ b/StyleSheets/styles.css
@@ -1,8 +1,86 @@
 :root{
-    --MainColor: #000000;
-    --Secondary: #b60000;
-    --Tertiary:  #0047cc;
+    --MainGameColor: #000000;
+    --SecondaryGameColor: #b60000;
+    --TertiaryGameColor:  #0047cc;
+
+    --DarkModeMain: #212121;
+    
+}
+.HomeMain{
+    background-color: var(--DarkModeMain);
+    width: 100%;
+    height: 1000px; 
+    margin: 0%;
+    align-content: center;
+}
+.TitleText{
+    text-align: center;
+    color: #ffffff;
+    width: 100%;
+    background-color: var(--DarkModeMain);
+    height: auto;
+    margin: 0%;
+
+}
+#ButtonHolder{
+    text-align: center;
+    align-self: center;
+    height:50%;
+     
+    padding-top: 37.5;
+    flex-direction: row;
+}
+.ButtonStyle{
+   display: flexbox;
+   position: relative;
+   flex-direction: row;
+   top: 50%; 
+   width: 20%;
+   font-size: 50px;
+   border-radius: 20px;
+   border-color: #b60000;
+   border-style: solid;
+   border-width: 5px;
+   color: #ffffff;
+  
+}
+.UiBasic{
+    position: absolute;
+    background-color: #b6000099;
+    width: 100px;
+    height: 100px;
+    border-color: #ffffff;
+    border-width: 2px;
+    border-style: solid ;
+}
+#TopUI{
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 10%;
+    
+}
+#SideBarLeft{
+    
+    left: 0px;
+    top:0px;
+    width: 7%;
+    height: 69%;
+    margin-top: 5.8%;
+}
+#SideBarRight{
+    left: 92.5%;
+    top:0px;
+    width: 7%;
+    height: 69%;
+    margin-top: 5.8%;
+
+}
+#BottemUI{
+    top:80%;
+    width: 100%;
+    height: 10%;
 }
 .GameHolder{
-    background-color: var(--MainColor);
+    background-color: var(--MainGameColor);
 }
