--- a/StyleSheets/styles.css
+++ b/StyleSheets/styles.css
@@ -49,7 +49,8 @@
    border-style: solid;
    border-width: 5px;
    color: #ffffff;
-   background-color: #000000;
+   background-color: #000000bb;
+   font-family: 'Courier New', Courier, monospace;
   
 }
 .UiBasic{
