--- a/StyleSheets/styles.css
+++ b/StyleSheets/styles.css
@@ -64,11 +64,13 @@
     z-index: 1;
 }
 .ThreeWay{
+    display: flex;
     width: 33.333%;
     height: 100%;
     text-align:center;
+    flex-direction:column;
     
-    color: #ffffff;
+    
 }
 #TopUI{
     display: flex;
@@ -76,9 +78,15 @@
     left: 0px;
     width: 100%;
     height: 10%;
-    
+    color: #ffffff;
     
 }
+.TextBase{
+    color: #ffffff;
+    text-align: center;
+
+}
+
 #SideBarLeft{
     
     left: 0px;
@@ -104,5 +112,37 @@
     margin:0px;
     padding:0px;
     background-color: var(--MainGameColor);
+}
+.UpgradeUIBox{
+    
+    
+    overflow: auto;
+    height: 45%;
+    width: 100%;
+    background-color: blue;
+}
+
+.StatsBoxHolder{
+    display: flex;
+    width: 98%;
+    height: 10%;
+    background-color: #00000050;
+    border-color: #000000;
+    border-width: 1%;
+    border-style: solid;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    text-align: center;
+
+}
+label{
+    text-align: center;
+    
+}
+
+#FactoryName{
+    height: 10%;
+    width: 100%; 
+    text-align: center;
 }
 
