--- a/StyleSheets/styles.css
+++ b/StyleSheets/styles.css
@@ -182,5 +182,13 @@ label{
     background-color: white;
     background-size:contain;
     background-repeat:no-repeat ;
+   
+}
+.NewsReal{
+    line-height: 100px;
+    color: #ffffff;
+    width: 50;
+    font-size: 50px;
+   
 }
 
