--- a/StyleSheets/styles.css
+++ b/StyleSheets/styles.css
@@ -3,9 +3,7 @@
     --SecondaryGameColor: #b60000;
     --TertiaryGameColor:  #0047cc;
     --transpar: #00000000;
-
     --DarkModeMain: #00000000;
-    
 }
 .DarkBack{
     background-color: var(--DarkModeMain);
@@ -15,9 +13,7 @@
     width: 100%;
     height: 1000px; 
     margin: 0%;
-    align-content: center;
-    
-    
+    align-content: center; 
 }
 .TitleText{
     text-align: center;
@@ -25,15 +21,12 @@
     width: 100%;
     background-color: var(--DarkModeMain);
     height: auto;
-    
     margin-top: 1%;
-
 }
 #ButtonHolder{
     text-align: center;
     align-self: center;
     height:50%;
-     
     padding-top: 37.5;
     flex-direction: row;
 }
@@ -51,7 +44,6 @@
    color: #ffffff;
    background-color: #000000bb;
    font-family: 'Courier New', Courier, monospace;
-  
 }
 .UiBasic{
     position: absolute;
@@ -92,7 +84,6 @@
 .TextBase{
     color: #ffffff;
     text-align: center;
-
 }
 
 #SideBarLeft{
@@ -122,8 +113,6 @@
     background-color: var(--MainGameColor);
 }
 .UpgradeUIBox{
-    
-    
     overflow: auto;
     height: 45%;
     width: 100%;
@@ -141,11 +130,9 @@
     flex-direction: row;
     flex-wrap: nowrap;
     text-align: center;
-
 }
 label{
-    text-align: center;
-    
+    text-align: center;  
 }
 
 #FactoryName{
@@ -172,24 +159,43 @@ label{
 }
 .PolicyChange{
     width: 40%;
+    
     border-radius: 10px;
 }
+.PolicyChangeTex{
+    line-height: 200%;
+    font-size: 100%;
+    width: auto;
+    margin: auto;
+    
+}
+.PolicyLable{
+    width: 40%;
+    font-size: ;
+    line-height: 0;
+}
 .Inc{
+    height: 100%;
     aspect-ratio: 1 / 1;
+    background-size: 100%;
+    width: 20%;
     background: url('/sprites/IncArrow.png');
     background-color: transparent;
     border: transparent;
     background-size:contain;
     background-repeat:no-repeat ;
+    
 }
 .Dec{
-    aspect-ratio: 1 / 1;
+    height: 100%;
+    aspect-ratio: 1 / 1 ;
+    background-size: 100%;
+    width: 20%;
     background: url('/sprites/DecArrow.png');
     white-space:nowrap;
     border: transparent;
     background-size:contain;
     background-repeat:no-repeat ;
-   
 }
 .NewsReal{
     line-height: 0px;
@@ -197,8 +203,8 @@ label{
     color: #ffffff;
     width: 50;
     font-size: 50px;
-
 }
+
 .InfoDisplay{
     display: flex;
     flex-direction: row;
@@ -206,8 +212,7 @@ label{
     width: 24.9%;
     height: 49%;
     font-size: 120%;
-    text-align: center;
-    
+    text-align: center; 
 }
 .InfoImg{
     aspect-ratio: 1 / 1;
@@ -218,6 +223,7 @@ label{
 .InfoText{
     line-height: 0px;
     width:fit-content;
+    word-wrap: unset;
     margin: auto;
     font-size: 150%;
     color: white;
