--- a/StyleSheets/styles.css
+++ b/StyleSheets/styles.css
@@ -1,10 +1,11 @@
 @font-face { font-family: RETROTECH; src: url('/StyleSheets/RETROTECH.ttf') format("truetype"); }
 :root{
-    --MainGameColor: #000000;
+    --MainGameColor: #ffffff44;
     --SecondaryGameColor: #b60000;
     --TertiaryGameColor:  #0047cc;
+    --Textcolor: #ffffff;
     --transpar: #00000000;
-    --DarkModeMain: #00000000;
+    --DarkModeMain: #0e0e0eff;
     font-family: 'RETROTECH', monospace;
     letter-spacing: .1rem;
 }
@@ -12,7 +13,7 @@
     background-color: var(--DarkModeMain);
 }
 .HomeMain{
-    background-color: var(--DarkModeMain);
+    background-color: var(--transpar);
     width: 100%;
     height: 1000px; 
     margin: 0%;
@@ -20,9 +21,9 @@
 }
 .TitleText{
     text-align: center;
-    color: #ffffff;
+    color: var(--Textcolor);
     width: 100%;
-    background-color: var(--DarkModeMain);
+    background-color: var(--transpar);
     height: auto;
     margin-top: 1%;
 }
@@ -41,19 +42,19 @@
    width: 20%;
    font-size: 50px;
    border-radius: 20px;
-   border-color: #b60000;
+   border-color: var(--SecondaryGameColor);
    border-style: solid;
    border-width: 5px;
-   color: #ffffff;
-   background-color: #000000bb;
+   color: var(--Textcolor);
+   background-color: var(--DarkModeMain);
    font-family: 'Courier New', Courier, monospace;
 }
 .UiBasic{
     position: absolute;
-    background-color: #0e0e0eff;
+    background-color: var(--DarkModeMain);
     width: 100px;
     height: 100px;
-    border-color: #ffffff44;
+    border-color: var(--SecondaryGameColor);
     border-width: 2px;
     border-style:none ;
     z-index: 1;
@@ -85,7 +86,7 @@
     
 }
 .TextBase{
-    color: #ffffff;
+    color: var(--Textcolor);
     text-align: center;
 }
 
@@ -119,20 +120,23 @@
     overflow: auto;
     height: 45%;
     width: 100%;
-    background-color: #1d1a19;
+    background-color: var(--DarkModeMain);
 }
 
 .StatsBoxHolder{
     display: flex;
     width: 98%;
     height: 10%;
-    background-color: #00000050;
-    border-color: #000000;
+    background-color: var(--DarkModeMain);
+    border-color: Var(--SecondaryGameColor);
     border-width: 1%;
     border-style: solid;
     flex-direction: row;
     flex-wrap: nowrap;
     text-align: center;
+    border-bottom: 0px solid var(--SecondaryGameColor);
+    border-left: 0px solid var(--SecondaryGameColor);
+    border-right: 0px solid var(--SecondaryGameColor);
 }
 label{
     text-align: center;  
@@ -149,8 +153,8 @@ label{
 }
 .Policy{
     height: 10%;
-    color: white;
-    background-color: #1d1a19;
+    color: var(--Textcolor);
+    background-color: var(--DarkModeMain);
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -207,7 +211,7 @@ label{
 .NewsReal{
     line-height: 0px;
     white-space:nowrap;
-    color: #ffffff;
+    color: var(--Textcolor);
     width: 50;
     font-size: 50px;
 }
@@ -233,6 +237,6 @@ label{
     word-wrap: unset;
     margin: auto;
     font-size: 150%;
-    color: white;
+    color: var(--Textcolor);
 }
 
