--- a/StyleSheets/styles.css
+++ b/StyleSheets/styles.css
@@ -257,4 +257,9 @@ label{
     font-size: 150%;
     color: var(--Textcolor);
 }
-
+.BoxButton{
+    height: 100%;
+    width: auto;
+    aspect-ratio: 1 / 1;
+    background-size:contain ;
+}
